--- a/index.html
+++ b/index.html
@@ -5,12 +5,69 @@
   <title>Landscapes – p5.js Sketch</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      text-align: center;
+      padding: 1em;
+    }
+    #sketch-container {
+      position: relative;
+      margin: 0;
+      padding: 0;
+    }
+    #button-container {
+      position: fixed;
+      top: 1em;
+      right: 1em;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+    }
+    button {
+      padding: 0.5em 1em;
+      background: #e0f7fa;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #b2ebf2;
+    }
+  </style>
 </head>
 <body>
-  <main>
-    <h1 style="text-align:center;">🌿 Landscapes – p5.js Sketch</h1>
-    <p style="text-align:center;">Now running: <code>rain.js</code></p>
-  </main>
-  <script src="rain.js"></script>
+  <header>
+    <h1>🌿 Landscapes – p5.js Sketch</h1>
+    <p>Select a sketch using the buttons on the right</p>
+  </header>
+
+  <div id="sketch-container"></div>
+
+  <div id="button-container">
+    <button onclick="loadSketch('rain.js')">Rain</button>
+    <button onclick="loadSketch('collage.js')">Collage</button>
+    <button onclick="loadSketch('GenerativeSketchPad.js')">Generative</button>
+  </div>
+
+  <script>
+    let currentScript;
+
+    function loadSketch(file) {
+      if (currentScript) {
+        document.body.removeChild(currentScript);
+      }
+      currentScript = document.createElement('script');
+      currentScript.src = file;
+      document.body.appendChild(currentScript);
+    }
+
+    // Load default sketch
+    loadSketch('rain.js');
+  </script>
 </body>
 </html>
