--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <button onclick="loadSketch('meteorite.js')">Meteorite</button>
     <button onclick="loadSketch('popcorn.js')">Popcorn</button>
     <button onclick="loadSketch('pong_1.js')">Pong 1</button>
-    <button onclick="loadSketch('monster.js')">Monster</button>
-    <button onclick="loadSketch('monster_sketch.js')">Monster Sketch</button>
-    <button onclick="loadSketch('GenerativeSketchPad.js')">Generative Pad</button>
+    <button onclick="loadSketch('monster_sketch.js')">Monster</button>
+    <!-- <button onclick="loadSketch('GenerativeSketchPad.js')">Generative Pad</button> -->
+<!-- <button onclick="loadSketch('monster.js')">Monster</button> -->
   </div>
 
   <div id="sketch-holder"></div>
