--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   </header>
 
   <div id="button-container">
-    <button onclick="loadSketch('rain.js')">Rain</button>
-    <button onclick="loadSketch('raintwo.js')">Rain Two</button>
+    <button onclick="loadSketch('rain.js')">Rain on water</button>
+    <button onclick="loadSketch('raintwo.js')">Droplets</button>
     <button onclick="loadSketch('leaves_in_breeze.js')">Leaves in Breeze</button>
     <button onclick="loadSketch('meteorite.js')">Meteorite</button>
     <button onclick="loadSketch('popcorn.js')">Popcorn</button>
