--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <button onclick="loadSketch('leaves_in_breeze.js')">Leaves in Breeze</button>
     <button onclick="loadSketch('meteorite.js')">Meteorite</button>
     <button onclick="loadSketch('popcorn.js')">Popcorn</button>
-    <button onclick="loadSketch('pong_1.js')">Pong 1</button>
+    <button onclick="loadSketch('sun_thro_rain.js')">Mandala</button>
+    <button onclick="loadSketch('pong_1.js')">Mini Pong</button>
     <button onclick="loadSketch('monster_sketch.js')">Monster</button>
     <!-- <button onclick="loadSketch('GenerativeSketchPad.js')">Generative Pad</button> -->
 <!-- <button onclick="loadSketch('monster.js')">Monster</button> -->
