--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>🌿 Generative Landscapes Gallery</title>
+  <title>Soft Systems: A Sketchbook of Generative Motion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   <style>
@@ -38,24 +38,23 @@
     }
     #sketch-holder {
       width: 100%;
-      height: 80vh;
+      height: 90vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    #description-box {
-      margin: 1em;
+    #about-text {
+      display: none;
       padding: 1em;
-      background: #ffffff;
-      border-left: 4px solid #ccc;
-      max-width: 400px;
-      font-size: 14px;
+      max-width: 600px;
+      margin: auto;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>🌱 Generative Landscapes Gallery</h1>
+    <h1>Soft Systems: A Sketchbook of Generative Motion</h1>
     <p>Click a sketch title to explore</p>
   </header>
 
@@ -68,55 +67,45 @@
     <button onclick="loadSketch('sun_thro_rain.js')">Mandala</button>
     <button onclick="loadSketch('pong_1.js')">Mini Pong</button>
     <button onclick="loadSketch('monster_sketch.js')">Monster</button>
-    <!-- <button onclick="loadSketch('GenerativeSketchPad.js')">Generative Pad</button> -->
-    <!-- <button onclick="loadSketch('monster.js')">Monster</button> -->
-  </div>
-
-  <div id="description-box">
-    <!-- Description of the current sketch will appear here -->
+    <button onclick="toggleAbout()">About This Gallery</button>
   </div>
 
   <div id="sketch-holder"></div>
 
+  <div id="about-text">
+    <p><strong>About this Gallery</strong></p>
+    <p>
+      This interactive gallery showcases a collection of generative motion sketches built using <code>p5.js</code>.
+      Developed while studying at University of the Arts London (UAL), these pieces explore natural movement,
+      playfulness, and screen-based expression. From soft rain to digital leaves, each sketch offers a glimpse into
+      how simple code can echo the gentle complexity of nature.
+    </p>
+  </div>
+
   <script>
     let currentScript = null;
 
-    // Descriptions for each sketch
-    const sketchDescriptions = {
-      'rain.js': '🌧️ Rain on Water — A field of elliptical droplets falling with soft variance in blue.',
-      'raintwo.js': '💧 Droplets — Transparent blocks falling in layered rhythm like glitched rain.',
-      'leaves_in_breeze.js': '🍃 Leaves in Breeze — Floating ellipses scattered like leaves in a gentle wind.',
-      'meteorite.js': '☄️ Meteorite — Rainbow meteor blobs drift and fall like a lava lamp. Click to reverse flow.',
-      'popcorn.js': '🍿 Popcorn — Expanding bubble kernels popping with soft motion and reset on click.',
-      'sun_thro_rain.js': '🌈 Mandala — A circular rainbow bloom built from layered concentric ellipses.',
-      'pong_1.js': '🎮 Mini Pong — A solo paddle game with colorful background feedback. Use ↑ ↓ to move.',
-      'monster_sketch.js': '👾 Monster — A playful geometric creature. Click to change its color.',
-    };
-
     function loadSketch(file) {
-      // Remove previous sketch
       if (window.currentP5 && typeof window.currentP5.remove === 'function') {
         window.currentP5.remove();
         window.currentP5 = null;
       }
-
       if (currentScript) {
         currentScript.remove();
       }
-
-      // Load new sketch
       const script = document.createElement('script');
       script.src = file;
       script.onload = () => console.log(`✅ Loaded: ${file}`);
       script.onerror = () => console.error(`❌ Failed to load: ${file}`);
       document.body.appendChild(script);
       currentScript = script;
-
-      // Update description box
-      document.getElementById('description-box').innerText = sketchDescriptions[file] || '';
     }
 
-    // Load default sketch on page load
+    function toggleAbout() {
+      const about = document.getElementById('about-text');
+      about.style.display = (about.style.display === 'none') ? 'block' : 'none';
+    }
+
     window.onload = () => {
       console.log('🌿 Page loaded');
       loadSketch('rain.js');
